# ai-knot

./: .dockerignore  .gitignore  .mlc-config.json  .pre-commit-config.yaml  AGENTS_USED.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  DEVELOPMENT.md  Dockerfile  Dockerfile.v2  LICENSE  MANIFEST.in  README.md  pyproject.toml  server.json
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  install_bug_report.md  integration_request.md
.github/workflows/: benchmark.yml  ci.yml  npm-publish.yml  pages.yml  pre-launch-audit.yml  public-launch-audit.yml  publish-agentmem.yml  publish-mcp-registry.yml  publish.yml  release.yml
aiknotbench/: .env.example  .gitignore  DECISIONS.md  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
aiknotbench/scripts/: bench_gate.sh  build_gold_mapper.ts  compare_runs.py  diagnose_recall.ts  eval_recall_buckets.ts
aiknotbench/src/: _debug_recall_quality.ts  aiknot.ts  config.ts  evaluator.ts  index.ts  locomo.ts  models.ts  runner.ts  variance_report.ts
aiknotbench/tests/: test_diagnose_recall.ts  test_eval_recall_buckets.ts  test_gold_mapper.ts  test_runner_trace_capture.ts
deep_research/: pyproject.toml
deep_research/deep_research/: cli.py  config.py  corpus.py  llm.py  memory.py  orchestrator.py  semantic.py
deep_research/deep_research/roles/: analyst.py  base.py  critic.py  director.py  experimenter.py  prover.py  scout.py  theorist.py
deep_research/tests/: conftest.py  test_cli.py  test_memory.py  test_orchestrator.py  test_semantic.py
docs/: README.md  RELEASE.md  air-gapped-deployment.md  announce.md  autogen-case-study.md  benchmarks.md  channel-playbook.md  claude-mcp-case-study.md  codespaces-quickstart.md  comparison.md  competitive-analysis.md  competitor-bench-pack.md  crewai-case-study.md  demo-script.md  deployment.md  developer-article.md  faq.md  gap-analysis.md  gtm-readiness.md  http-sidecar-case-study.md  integrations.md  langgraph-case-study.md  launch-checklist.md  launch-plan.md  launch-post.md  llamaindex-case-study.md  memory-commands.md  multi-agent-governance.md  openai-agents-case-study.md  openclaw-case-study.md  positioning.md  production-readiness.md  publish-ready-audit.md  pydanticai-case-study.md  readme-patterns.md  submission-pack.md  troubleshooting.md  usage.md  vercel-ai-sdk-case-study.md  whitepaper.md
docs/site/: developer-article.html  index.html  whitepaper.html
examples/: README.md  autogen_integration.py  autogen_surface_demo.py  browser_inspector_demo.py  claude_mcp_setup.py  cli_memory_loop.py  coding_agent.py  crewai_integration.py  crewai_surface_demo.py  function_calling_surface_demo.py  hero_demo.py  http_sidecar_surface_demo.py  langchain_integration.py  langgraph_surface_demo.py  llamaindex_integration.py  llamaindex_surface_demo.py  multilingual.py  notebook_walkthrough.ipynb  openai_agents_integration.py  openai_agents_surface_demo.py  openai_integration.py  openclaw_integration.py  poisoned_pool.py  pydanticai_integration.py  pydanticai_surface_demo.py  quickstart.py  shared_pool.py  structured_correction.py
longmemevalbench/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
longmemevalbench/data/: sample_longmemeval.json
longmemevalbench/scripts/: ai-knot-mcp-worktree.sh
longmemevalbench/src/: aiknot.ts  config.ts  evaluator.ts  index.ts  loader.ts  models.ts  recall.ts  runner.ts
longmemevalbench/tests/: test_evaluator.ts  test_loader.ts  test_recall.ts  test_runner.ts
npm/: .npmignore  README.md  package-lock.json  package.json  tsconfig.build.json  tsconfig.json
npm/examples/: basic-memory-loop.ts  http-sidecar.ts  (+2 more)
research/: INDEX.md  biological_mechanisms_deep_dive.md  branch_archive_plan_20260426.md  ccb_benchmark_design.md  chronology_20260413_20260426.md  cognitive_memory_model.md  dated_full10_analysis_20260426.md  eswp_level3_implementation_spec.md  extraction_sufficient_witness_program.md  iwt_v2_implementation_audit_20260424.md  landmark_experiment_design.md  lexical_uplift_20260426.md  ma_baseline_20260609.md  ma_metric_calibration_20260610.md  memory_substrate_v1_article_and_plan_20260424.md  pattern_memory_architecture.md  phase_e_query_shape_routing.md  raw_first_memory_architecture_20260413.md  raw_first_plan_v2_20260413.md  raw_first_v2_project_impact_20260413.md  s9_clean_resolution_impossibility_20260610.md  strand_data_structure.md  three_agent_dev_plan_20260426.md
scripts/: apply_repo_metadata.py  cat1_retrieval_replay.py  check_local_launch_ready.py  check_public_release.py  render_github_release.py  render_hero_demo_gif.py  render_site_articles.py  render_whitepaper_pdf.py  run_competitor_bench_pack.py  run_ma_bench.sh  trace_cat1_misses.py
skills/: README.md  principal_architect.md  principal_devops.md  principal_python_developer.md  principal_qa_engineer.md  user_guide.md
tests/: compliance_allowlist.txt  conftest.py  test_acl_ledger_storage.py  test_air_gapped.py  test_apply_repo_metadata_script.py  test_atc_guardrail.py  test_benchmark_smoke.py  test_bm25_field_weights_override.py  test_channel_c_entity_hop.py  test_cli.py  test_cli_errors.py  test_competitor_bench_pack.py  test_concurrent.py  test_config.py  test_conflict_resolution.py  test_consolidation.py  test_date_enrichment.py  test_ddsa_integration.py  test_dense_weight_mult.py  test_devcontainer_config.py  test_dockerfile.py  test_docs_contracts.py  test_embedder.py  test_entity_scoping.py  test_event_retrieval.py  test_event_time_persistence.py  test_evidence_rendering.py  test_examples.py  test_extractor.py  test_extractor_enumeration.py  test_extractor_errors.py  test_feature_flags.py  test_forgetting.py  test_forgetting_scenarios.py  test_integration.py  test_integrations_autogen.py  test_integrations_crewai.py  test_integrations_langchain.py  test_integrations_llamaindex.py  test_integrations_openai_agents.py  (+78 more)
typosquat/: pyproject.toml
typosquat/agentmem/: __init__.py
(+254 files in other folders)
