[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentmemo"
version = "0.1.0"
description = "Agent Knowledge Layer. Extract. Store. Retrieve. Any backend."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Oleg"}]
requires-python = ">=3.11"
keywords = ["ai", "agents", "memory", "knowledge", "llm", "rag"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0"]
openai = ["openai>=1.0"]
postgres = ["psycopg[binary]>=3.1"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-PyYAML>=6.0",
]

[project.scripts]
agentmemo = "agentmemo.cli:main"
agentmemo-mcp = "agentmemo.mcp_server:main"

[project.urls]
Homepage = "https://github.com/alsoleg89/agentmemo"
Repository = "https://github.com/alsoleg89/agentmemo"
Issues = "https://github.com/alsoleg89/agentmemo/issues"
Documentation = "https://github.com/alsoleg89/agentmemo#readme"

[tool.hatch.build.targets.wheel]
packages = ["src/agentmemo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=agentmemo --cov-report=term-missing --cov-fail-under=80 -v"
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that touch storage or multiple layers",
    "slow: tests that are intentionally slow (benchmarks, large data)",
    "requires_api_key: tests that call real LLM APIs (skipped in CI)",
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["agentmemo"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["agentmemo"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["httpx", "httpx.*", "click", "click.*", "yaml", "psycopg", "psycopg.*", "mcp", "mcp.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["agentmemo.cli", "agentmemo.mcp_server"]
disallow_untyped_decorators = false
