[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ai-knot"
version = "0.11.0"
description = "Deterministic, self-hosted long-term memory for AI agents."
readme = "README.md"
license = {text = "MIT"}
authors = [{name = "Oleg"}]
requires-python = ">=3.11"
keywords = [
    "ai",
    "agents",
    "agent-memory",
    "ai-memory",
    "long-term-memory",
    "context-engineering",
    "mcp",
    "langgraph",
    "llamaindex",
    "crewai",
    "autogen",
    "openai-agents",
    "pydanticai",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0,<2"]
openai = ["openai>=1.0"]
postgres = ["psycopg[binary]>=3.1"]
server = ["fastapi>=0.110", "uvicorn[standard]>=0.29"]
crewai = ["crewai"]
autogen = ["autogen-agentchat", "autogen-ext[openai]"]
agents = ["openai-agents"]
pydanticai = ["pydantic-ai"]
langchain = ["langchain-core>=0.3"]
langgraph = ["langchain-core>=0.3", "langgraph>=0.2"]
llamaindex = ["llama-index-core>=0.14"]
integrations = ["crewai", "autogen-agentchat", "autogen-ext[openai]", "openai-agents", "pydantic-ai", "langchain-core>=0.3", "langgraph>=0.2", "llama-index-core>=0.14"]
benchmark = ["qdrant-client>=1.8", "mem0ai>=0.1", "chromadb>=0.5", "ollama>=0.3"]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-benchmark>=4.0",
    "pytest-xdist>=3.5",
    "pytest-timeout>=2.3",
    "ruff>=0.4",
    "mypy>=1.10",
    "markdown-it-py>=3.0",
    "types-PyYAML>=6.0",
    # HTTP sidecar (server extra) + TestClient — kept in dev so the server tests
    # run in the standard test job without a dedicated CI install step.
    "fastapi>=0.110",
    "httpx>=0.27",
]

[project.scripts]
ai-knot = "ai_knot.cli:main"
ai-knot-mcp = "ai_knot.mcp_server:main"

[project.urls]
Homepage = "https://github.com/alsoleg89/ai-knot"
Repository = "https://github.com/alsoleg89/ai-knot"
Issues = "https://github.com/alsoleg89/ai-knot/issues"
Documentation = "https://github.com/alsoleg89/ai-knot#readme"
Benchmarks = "https://github.com/alsoleg89/ai-knot/blob/main/docs/benchmarks.md"
Integrations = "https://github.com/alsoleg89/ai-knot/blob/main/docs/integrations.md"
Changelog = "https://github.com/alsoleg89/ai-knot/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/ai_knot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=ai_knot --cov-report=term-missing --cov-fail-under=80 -v --ignore=tests/eval/benchmark --ignore=tests/test_benchmark_smoke.py"
markers = [
    "unit: fast, isolated unit tests",
    "integration: tests that touch storage or multiple layers",
    "slow: tests that are intentionally slow (benchmarks, large data)",
    "requires_api_key: tests that call real LLM APIs (skipped in CI)",
    "real_embedder: opt out of the deterministic-embedder stub in conftest",
    "benchmark: comparative backend benchmark suite (requires Ollama for full run)",
]

[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.lint.per-file-ignores]
# Fixture data files contain intentionally long string literals (benchmark content).
"tests/eval/benchmark/fixtures.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["ai_knot"]

[tool.mypy]
strict = true
python_version = "3.11"
mypy_path = "src"
packages = ["ai_knot"]
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["httpx", "httpx.*", "click", "click.*", "yaml", "psycopg", "psycopg.*", "mcp", "mcp.*", "sentence_transformers", "sentence_transformers.*", "uvicorn", "uvicorn.*", "crewai", "crewai.*", "agents", "agents.*", "autogen_core", "autogen_core.*", "autogen_agentchat", "autogen_agentchat.*", "autogen_ext", "autogen_ext.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["ai_knot.cli", "ai_knot.mcp_server"]
disallow_untyped_decorators = false
