[project]
name = "deep-research"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.52",
    "click>=8.1",
    "numpy>=1.26",
    "pypdf>=4.0",
]

[project.optional-dependencies]
semantic = [
    "sentence-transformers>=3.0",
]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
]

[project.scripts]
deep_research = "deep_research.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["deep_research"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
